--- a/index.html
+++ b/index.html
@@ -2,18 +2,6 @@
 <html lang="en">
 
 <head>
-<<<<<<< HEAD
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <script src="script.js"></script>
-=======
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -22,17 +10,17 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Brewery Search</title>
+    <title>Brew Near You</title>
 </head>
 
 <body>
     <section class="hero is-warning">
         <div class="hero-body">
             <div class="container">
-                <h1 class="title"><i class="fas fa-beer" style="padding-right: 1rem"></i> Brewery Search
+                <h1 class="title"><i class="fas fa-beer" style="padding-right: 1rem"></i> Brew Near You
                 </h1>
                 <h2 class="subtitle">
-                    Find a local brewery near you
+                    Search by city and state to find breweries near you.
                 </h2>
             </div>
         </div>
@@ -40,15 +28,6 @@
 
     <section class="section">
         <div class="container">
-            <h2 class="subtitle">
-                Search Parameters
-            </h2>
-            <div class="field">
-                <label class="label">Brewery Name</label>
-                <div class="control">
-                    <input class="input is-danger" type="text" placeholder="optional">
-                </div>
-            </div>
             <div class="field">
                 <label class="label">Location</label>
                 <div class="control">
@@ -66,7 +45,7 @@
                 Results (with clickable map)
             </h2>
             <div class="card-body" id="results">
-                Results will pop up here
+
             </div>
         </div>
     </section>
@@ -76,7 +55,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="js/script.js"></script>
->>>>>>> 5c8bc09aadc7c774622fe057225cceedda547c29
 </body>
 
 </html>
