--- a/index.html
+++ b/index.html
@@ -2,18 +2,6 @@
 <html lang="en">
 
 <head>
-<<<<<<< HEAD
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <script src="script.js"></script>
-=======
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -28,13 +16,11 @@
 <body>
     <section class="hero is-warning">
         <div class="hero-body">
-            <div class="container">
-                <h1 class="title"><i class="fas fa-beer" style="padding-right: 1rem"></i> Brewery Search
-                </h1>
-                <h2 class="subtitle">
-                    Find a local brewery near you
-                </h2>
-            </div>
+            <h1 class="title"><i class="fas fa-beer" style="padding-right: 1rem"></i> Brewery Search
+            </h1>
+            <h2 class="subtitle">
+                Find a local brewery near you
+            </h2>
         </div>
     </section>
 
@@ -46,16 +32,18 @@
             <div class="field">
                 <label class="label">Brewery Name</label>
                 <div class="control">
-                    <input class="input is-danger" type="text" placeholder="optional">
+                    <input class="input is-danger" type="text" id="searchInput" placeholder="optional">
                 </div>
             </div>
             <div class="field">
                 <label class="label">Location</label>
                 <div class="control">
-                    <input class="input is-danger" type="text" placeholder="current location by default">
+                    <input class="input is-danger" type="text" id="searchLocation"
+                        placeholder="current location by default">
                 </div>
             </div>
-            <button class="button is-black"><i class="fas fa-search" style="padding-right: 1rem"></i> Search</button>
+            <button id="searchBtn" class="button is-black"><i class="fas fa-search" style="padding-right: 1rem"></i>
+                Search</button>
         </div>
     </section>
 
@@ -65,18 +53,38 @@
             <h2 class="subtitle">
                 Results (with clickable map)
             </h2>
-            <div class="card-body" id="results">
-                Results will pop up here
+            <div class="field">
+                <p id="results"></p>
+
             </div>
         </div>
     </section>
+
+
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/topojson.v0.min.js"></script>
+    <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.css" />
+    <script src="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.js"></script>
+
+    <div id="mapid"></div>
+
+
+    <section class="hero is-warning">
+        <div class="content has-text-centered is-warning hero-body">
+            <p>
+                <strong>Please drink responsibly.</strong>
+            </p>
+        </div>
+    </section>
+
+
+
 
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="js/script.js"></script>
->>>>>>> 5c8bc09aadc7c774622fe057225cceedda547c29
 </body>
 
 </html>
