--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="field">
                 <label class="label">Location</label>
                 <div class="control">
-                    <input class="input is-danger" type="text" id="searchLocation"
-                        placeholder="current location by default">
+                    <input id="city" class="input is-danger" type="text" id="searchLocation" placeholder="City">
+                    <input id="state" class="input is-danger" type="text" id="searchLocation" placeholder="State">
                 </div>
             </div>
             <button class="button is-black"><i class="fas fa-search" style="padding-right: 1rem"></i> Search</button>
@@ -48,18 +48,37 @@
         </div>
     </section>
 
-    <div id="mapid" style="height: 300px;"></div>
+    <!-- Results -->
+    <section id="results" class="section">
 
-    <section class="section">
-        <div class="container">
-            <h2 class="subtitle">
-                Results (with clickable map)
-            </h2>
-            <div class="card-body" id="results">
-
+        <div class="columns">
+            <div class="column">
+                <div class="card">
+                    <div class="card-image">
+                        <figure class="image is-4by3">
+                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-left">
+                            </div>
+                            <div class="media-content">
+                                <p class="title is-4">Brewery Name</p>
+                                <p class="subtitle is-6">Phone Number</p>
+                                <div class="content has-text-centered">
+                                    RATING
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+
         </div>
     </section>
+
 
 
     <script src="https://d3js.org/d3.v3.min.js"></script>
