created cards that display brewery search results

--- a/index.html
+++ b/index.html
@@ -49,37 +49,10 @@
     </section>
 
     <!-- Results -->
-    <section id="results" class="section">
-
-        <div class="columns">
-            <div class="column">
-                <div class="card">
-                    <div class="card-image">
-                        <figure class="image is-4by3">
-                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-left">
-                            </div>
-                            <div class="media-content">
-                                <p class="title is-4">Brewery Name</p>
-                                <p class="subtitle is-6">Phone Number</p>
-                                <div class="content has-text-centered">
-                                    RATING
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
+    <section id="results-section" class="section">
+        <div id="results" class="columns is-multiline">
         </div>
     </section>
-
-
 
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://d3js.org/topojson.v0.min.js"></script>
@@ -87,20 +60,6 @@
     <script src="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.js"></script>
 
     <div id="mapid"></div>
-
-
-    <section class="hero is-warning">
-        <div class="content has-text-centered is-warning hero-body">
-            <p>
-                <strong>Please drink responsibly.</strong>
-            </p>
-        </div>
-    </section>
-
-
-
-
-
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
