--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
         crossorigin=""></script>
+    <!-- Mapquest scripts-->
+    <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css" />
+
     <link rel="stylesheet" href="css/style.css" />
     <title>Brew Near You</title>
 </head>
@@ -27,98 +31,107 @@
                 <h1 class="title"><i class="fas fa-beer" style="padding-right: 1rem"></i> Brew Near You
                 </h1>
                 <h2 class="subtitle">
-                    Search by city and state to find breweries near you.
+                    Search to find breweries near you
                 </h2>
             </div>
         </div>
     </section>
 
     <section class="section">
-        <div class="container">
+        <div class="container is-fluid">
             <div class="field">
                 <label class="label">Location</label>
-                <div class="control" width="500px">
-                    <input class="input is-danger" autocomplete="on" spellcheck="true" autocapitalize="on" type="text"
-                        id="searchLocation" placeholder="current location by default" spellcheck="on">
-                    <div class="select is-danger">
-                        <select>
-                            <option value="AL">Alabama</option>
-                            <option value="AK">Alaska</option>
-                            <option value="AZ">Arizona</option>
-                            <option value="AR">Arkansas</option>
-                            <option value="CA">California</option>
-                            <option value="CO">Colorado</option>
-                            <option value="CT">Connecticut</option>
-                            <option value="DE">Delaware</option>
-                            <option value="DC">District Of Columbia</option>
-                            <option value="FL">Florida</option>
-                            <option value="GA">Georgia</option>
-                            <option value="HI">Hawaii</option>
-                            <option value="ID">Idaho</option>
-                            <option value="IL">Illinois</option>
-                            <option value="IN">Indiana</option>
-                            <option value="IA">Iowa</option>
-                            <option value="KS">Kansas</option>
-                            <option value="KY">Kentucky</option>
-                            <option value="LA">Louisiana</option>
-                            <option value="ME">Maine</option>
-                            <option value="MD">Maryland</option>
-                            <option value="MA">Massachusetts</option>
-                            <option value="MI">Michigan</option>
-                            <option value="MN">Minnesota</option>
-                            <option value="MS">Mississippi</option>
-                            <option value="MO">Missouri</option>
-                            <option value="MT">Montana</option>
-                            <option value="NE">Nebraska</option>
-                            <option value="NV">Nevada</option>
-                            <option value="NH">New Hampshire</option>
-                            <option value="NJ">New Jersey</option>
-                            <option value="NM">New Mexico</option>
-                            <option value="NY">New York</option>
-                            <option value="NC">North Carolina</option>
-                            <option value="ND">North Dakota</option>
-                            <option value="OH">Ohio</option>
-                            <option value="OK">Oklahoma</option>
-                            <option value="OR">Oregon</option>
-                            <option value="PA">Pennsylvania</option>
-                            <option value="RI">Rhode Island</option>
-                            <option value="SC">South Carolina</option>
-                            <option value="SD">South Dakota</option>
-                            <option value="TN">Tennessee</option>
-                            <option value="TX">Texas</option>
-                            <option value="UT">Utah</option>
-                            <option value="VT">Vermont</option>
-                            <option value="VA">Virginia</option>
-                            <option value="WA">Washington</option>
-                            <option value="WV">West Virginia</option>
-                            <option value="WI">Wisconsin</option>
-                            <option value="WY">Wyoming</option>
-                        </select>
-                    </div>
-
-                </div>
+                <p class="control has-icons-left">
+                    <input class="input is-danger" type="text" id="searchCity"
+                        placeholder="current location by default">
+                    <span class="icon is-small is-left">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </span>
+                </p>
             </div>
+
+            <div class="field">
+                <p class="control">
+                    <select class="input is-danger" id="searchState">
+                        <option value="">Select you state</option>
+                        <option value="Alabama">AL - Alabama</option>
+                        <option value="Alaska">AK - Alaska</option>
+                        <option value="Arizona">AZ - Arizona</option>
+                        <option value="Arkansas">AR - Arkansas</option>
+                        <option value="California">CA - California</option>
+                        <option value="Colorado">CO - Colorado</option>
+                        <option value="Connecticut">CT - Connecticut</option>
+                        <option value="Delaware">DE - Delaware</option>
+                        <option value="District Of Columbia">DC - District Of Columbia</option>
+                        <option value="Florida">FL - Florida</option>
+                        <option value="Georgia">GA - Georgia</option>
+                        <option value="Hawaii">HI - Hawaii</option>
+                        <option value="Idaho">ID - Idaho</option>
+                        <option value="Illinois">IL - Illinois</option>
+                        <option value="Indiana">IN - Indiana</option>
+                        <option value="Iowa">IA - Iowa</option>
+                        <option value="Kansas">KS - Kansas</option>
+                        <option value="Kentucky">KY - Kentucky</option>
+                        <option value="Louisiana">LA - Louisiana</option>
+                        <option value="Maine">ME - Maine</option>
+                        <option value="Maryland">MD - Maryland</option>
+                        <option value="Massachusetts">MA - Massachusetts</option>
+                        <option value="Michigan">MI - Michigan</option>
+                        <option value="Minnesota">MN - Minnesota</option>
+                        <option value="Mississippi">MS - Mississippi</option>
+                        <option value="Missouri">MO - Missouri</option>
+                        <option value="Montana">MT - Montana</option>
+                        <option value="Nebraska">NE - Nebraska</option>
+                        <option value="Nevada">NV - Nevada</option>
+                        <option value="New Hampshire">NH - New Hampshire</option>
+                        <option value="New Jersey">NJ - New Jersey</option>
+                        <option value="New Mexico">NM - New Mexico</option>
+                        <option value="New York">NY - New York</option>
+                        <option value="North Carolina">NC - North Carolina</option>
+                        <option value="North Dakota">ND - North Dakota</option>
+                        <option value="Ohio">OH - Ohio</option>
+                        <option value="Oklahoma">OK - Oklahoma</option>
+                        <option value="Oregon">OR - Oregon</option>
+                        <option value="Pennsylvania">PE - Pennsylvania</option>
+                        <option value="Rhode Island">RI - Rhode Island</option>
+                        <option value="South Carolina">SC - South Carolina</option>
+                        <option value="South Dakota">SD - South Dakota</option>
+                        <option value="Tennessee">TN - Tennessee</option>
+                        <option value="Texas">TX - Texas</option>
+                        <option value="Utah">UT - Utah</option>
+                        <option value="Vermont">VT - Vermont</option>
+                        <option value="Virginia">VA - Virginia</option>
+                        <option value="Washington">WA - Washington</option>
+                        <option value="West Virginia">WV - West Virginia</option>
+                        <option value="Wisconsin">WI - Wisconsin</option>
+                        <option value="Wyoming">WY - Wyoming</option>
+                    </select>
+                </p>
+            </div>
+
             <button class="button is-black"><i class="fas fa-search" style="padding-right: 1rem"></i>
                 Search</button>
-            <button id="beer-btn" class="button is-black"><i class="fas fa-search" style="padding-right: 1rem"></i>
+            <button id="beer-btn" class="button is-black"><i class="fas fa-beer" style="padding-right: 1rem"></i>
                 Beer</button>
         </div>
     </section>
-
-    <div id="mapid" style="height: 300px;"></div>
 
     <section class="section">
         <div class="container">
             <h2 class="subtitle">
                 Results (with clickable map)
             </h2>
+
+            <div id="mapid" style="height: 300px;"></div>
+
             <div class="card-body" id="results">
 
             </div>
         </div>
     </section>
 
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://d3js.org/topojson.v0.min.js"></script>
     <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.css" />
@@ -142,7 +155,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/scriptGetCoord.js"></script>
 </body>
 
 </html>
