--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1 class="title"><i class="fas fa-beer" style="padding-right: 1rem"></i> Brew Near You
                 </h1>
                 <h2 class="subtitle">
-                    Search to find breweries near you
+                    Find breweries near you
                 </h2>
             </div>
         </div>
@@ -122,7 +122,7 @@
                 Results (with clickable map)
             </h2>
 
-            <div id="mapid" style="height: 300px;"></div>
+            <div id="mapid" style="height: 900px; width: 50%;"></div>
 
             <div class="card-body" id="results">
 
@@ -137,7 +137,7 @@
     <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.css" />
     <script src="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.js"></script>
 
-    <div id="mapid"></div>
+
 
 
     <section class="hero is-warning">
@@ -155,7 +155,11 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+    <!-- toggle btwn the two JS -->
+    <!-- <script src="js/scriptGetCoord.js"></script> -->
     <script src="js/scriptGetCoord.js"></script>
+
 </body>
 
 </html>
