created a modal map by clicking on the info button, after mergining Andy and leo branch

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
     </section>
 
     <!-- Results -->
+    <section id="results-section" class="section">
+        <div id="results" class="columns is-multiline">
+        </div>
+    </section>
+<!--     
     <div id="info-modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
@@ -75,13 +80,13 @@
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
-                <!-- Content ... -->
+                Content ...
             </section>
             <footer class="modal-card-foot">
             </footer>
         </div>
-    </div>
-  
+    </div> -->
+
 
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://d3js.org/topojson.v0.min.js"></script>
