played with atb

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css" />
 
     <link rel="stylesheet" href="css/style.css" />
-    <title>Brew Near You</title>
+    <title>Brew Near You VERSION1.1</title>
 </head>
 
 <body>
