--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
     </section>
 
     <!-- Results -->
+    <section id="results-section" class="section">
+        <div id="results" class="columns is-multiline">
+        </div>
+    </section>
+
     <div id="info-modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
