--- a/index.html
+++ b/index.html
@@ -120,12 +120,10 @@
 
 
 
-
     <section class="section">
         <div class="modal">
             <div class="modal-background"></div>
-            <div class="modal-content"> -->
-                Any other Bulma elements you want
+            <div class="modal-content">
                 <div id="mapid" style="height: 300px;"></div>
             </div>
             <button class="modal-close is-large" aria-label="close"></button>
