--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         </div>
     </section>
 
-    <!--     
-    <div id="info-modal" class="modal">
+        
+    <!-- <div id="info-modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
             <header class="modal-card-head">
