reverse GEO and error msg

--- a/index1.html
+++ b/index1.html
@@ -148,7 +148,7 @@
         </div>
     </div> -->
     <section>
-        <div id="mapid1" style="height: 600px;"></div>
+        <div id="mapidTwo" style="height: 500px;"></div>
     </section>
 
 
@@ -171,7 +171,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="js/script1.js"></script>
+    <script src="js/scriptGetCoord.js"></script>
 
 </body>
 
