--- a/index.html
+++ b/index.html
@@ -9,38 +9,25 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-
     <!-- leafet css and script -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
-    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Quicksand&display=swap" rel="stylesheet">
-    <!-- Map css and script -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-
-        integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-        crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-        integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-
-        crossorigin=""></script> -->
 
     <!-- Mapquest scripts-->
     <script src="https://www.mapquestapi.com/sdk/leaflet/v2.2/mq-map.js?key=cRaBdQ9RUn3PkgcRWcT4gdj6CxzDt1rW"></script>
-    <script src="https://www.mapquestapi.com/sdk/leaflet/v2.2/mq-routing.js?key=cRaBdQ9RUn3PkgcRWcT4gdj6CxzDt1rW"></script>
-    <!-- <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css" /> -->
-    
-    <!-- animated css and script -->
-    <link rel="stylesheet" href="./css/vender-css/animate.css">
+    <script
+        src="https://www.mapquestapi.com/sdk/leaflet/v2.2/mq-routing.js?key=cRaBdQ9RUn3PkgcRWcT4gdj6CxzDt1rW"></script>
 
-        crossorigin=""></script>
+    <!-- animated css and script -->
+    <link rel="stylesheet" href="./assets/css/vender-css/animate.css">
+
     <!-- Mapquest scripts-->
     <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
     <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css" />
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Brew Near You</title>
 </head>
 
@@ -159,18 +146,12 @@
     <script src="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.js"></script>
 
 
-    <section class="hero is-warning bounce">
-        <div class="content has-text-centered is-warning hero-body">
-            <p>
-                <strong>Please drink responsibly.</strong>
-            </p>
-        </div>
-    </section>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
