changed to add/or

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1>Brew Near You</h1>
     </header>
 
-    <h2>Search by city and state to find breweries near you.</h2>
+    <h2>Search by city and/or state to find breweries near you.</h2>
 
     <nav class="level">
         <div class="level-item level-right">
@@ -119,6 +119,7 @@
 
     <!-- Results -->
     <section id="results-section" class="section">
+        <div id="errorMsg"></div>
         <div id="results" class="columns is-multiline">
         </div>
     </section>
