--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <option value="Ohio">OH</option>
                     <option value="Oklahoma">OK</option>
                     <option value="Oregon">OR</option>
-                    <option value="Pennsylvania">PE</option>
+                    <option value="Pennsylvania">PA</option>
                     <option value="Rhode Island">RI</option>
                     <option value="South Carolina">SC</option>
                     <option value="South Dakota">SD</option>
