--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
 
-    <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Roboto&display=swap" rel="stylesheet">
 
     <!-- Mapquest scripts-->
     <script src="https://www.mapquestapi.com/sdk/leaflet/v2.2/mq-map.js?key=cRaBdQ9RUn3PkgcRWcT4gdj6CxzDt1rW"></script>
@@ -38,7 +38,8 @@
         <h1>Brew Near You</h1>
     </header>
 
-    <h2>Search by city and/or state to find breweries near you.</h2>
+    <h2>Search by city and/or state to find breweries near you. Leave both fields empty to use your current location.
+    </h2>
 
     <nav class="level">
         <div class="level-item level-right">
